<resources>
    <string name="app_name">Unit converter</string>
    <string name="area">Area</string>
    <string name="mass">Mass/Weight</string>
    <string name="speed">Speed</string>
    <string name="time">Time</string>
    <string name="temperature">Temperature</string>
    <string name="lenght">Lenght/Distance</string>
    <string name="volume">Volume</string>
    <string name="pressure">Pressure</string>
    <string name="power">Power</string>
    <string name="torque">Torque</string>
    <string name="fuel">Fuel consumption</string>
    <string name="energy">Energy</string>
    <string name="digital_storage">Digital storage</string>
    <string name="cooking">Cooking</string>
    <string name="activity_area">Activity Area</string>
    <string name="Activity_Mass">Activity Mass</string>
    <string name="speed_activity">Speed Activity</string>
    <string name="time_activity">Time activity</string>
    <string name="temperature_activity">Temperature Activity</string>
    <string name="lenght_activity">Lenght Activity</string>
    <string name="volume_activity">Volume Activity</string>
    <string name="pressure_activity">Pressure Activity</string>
    <string name="power_activity">Power Activity</string>
    <string name="torque_activity">Torque Activity</string>
    <string name="fuel_activity">Fuel Activity</string>
    <string name="energy_activity">Energy Activity</string>
    <string name="digital_activity">Digital Activity</string>
    <string name="cooking_activity">Cooking Activity</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="convert">Convert</string>
    <string name="Kilogram">Kilogram</string>
    <string name="Result">Result</string>
    <string name="pound">Pound</string>
    <string name="miligram">Miligram</string>
    <string name="ounce">Ounce</string>
    <string name="grain">Grain</string>
    <string name="stone">Stone</string>
    <string name="ton_metric">Ton (metric)</string>
    <string name="ton_us">Ton (US/short)</string>
    <string name="ton_uk">Ton (UK/long)</string>


</resources>
